--- a/build.xml
+++ b/build.xml
@@ -9,9 +9,43 @@
                 <attribute name="Class-Path" value="."/>
             </manifest>
             <fileset dir="/home/mbrotz/Entwicklung/workspace/MonaLisa/bin"/>
-            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/workspace/MonaLisa/lib/args4j-2.0.21.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/workspace/MonaLisa/lib/guava-13.0.1.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/workspace/MonaLisa/lib/gson-2.2.2.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/args4j/args4j-2.0.21.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/gson/gson-2.2.2.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/guava/guava-13.0.1.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/jfree/jcommon-1.0.20.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/jfree/jfreechart-1.0.16.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/jcommander/jcommander-1.33-SNAPSHOT.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/batik.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/batik-rasterizer.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/batik-slideshow.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/batik-squiggle.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/batik-svgpp.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/batik-ttf2svg.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-anim.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-awt-util.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-bridge.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-codec.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-css.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-dom.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-ext.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-extension.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-gui-util.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-gvt.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-parser.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-script.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-svg-dom.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-svggen.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-swing.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-transcoder.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-util.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/batik-xml.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/js.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/pdf-transcoder.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/xalan-2.6.0.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/xerces_2_5_0.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/xml-apis.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/batik-1.7/lib/xml-apis-ext.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="/home/mbrotz/Entwicklung/lib/sqlite4java/sqlite4java-282/sqlite4java.jar"/>
         </jar>
     </target>
 </project>
