--- a/pom.xml
+++ b/pom.xml
@@ -96,5 +96,10 @@
 			<artifactId>jcommander</artifactId>
 			<version>1.32</version>
 		</dependency>
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.9-RC1</version>
+		</dependency>
 	</dependencies>
 </project>
