--- a/pom.xml
+++ b/pom.xml
@@ -122,5 +122,15 @@
 			<version>0.282</version>
 			<type>dll</type>
 		</dependency>
+		<dependency>
+			<groupId>org.jogamp.jogl</groupId>
+			<artifactId>jogl-all</artifactId>
+			<version>2.2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jogamp.gluegen</groupId>
+			<artifactId>gluegen-rt</artifactId>
+			<version>2.2.4</version>
+		</dependency>
 	</dependencies>
 </project>
